@startuml

' === GLOBAL STYLING ===
skinparam backgroundColor #f9f9f9
skinparam shadowing true
skinparam roundCorner 15
skinparam ArrowColor #444444
skinparam ArrowThickness 1.2
skinparam ArrowFontSize 11
skinparam packageTitleFontSize 14
skinparam classFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor white
  BorderColor #888888
}
skinparam class {
  BackgroundColor<<entity>> #cfefff
    BackgroundColor<<entity-valid>> #e6ffe6
  BackgroundColor<<entity-invalid>> #ffe6e6
}


'package SavageGraveyards {
'    package models {
        package location {
            interface ConfirmedLocation <<entity>> {
                + of(player: Player): ValidLocation
                + of(location: Location): ConfirmedLocation
                + of(worldName: String, worldUid: UUID, x: double, y: double, z: double, yaw: float, pitch: float): ConfirmedLocation
            }
            class ValidLocation <<entity-valid>> {
                - world: ValidWorld
                - x: double
                - y: double
                - z: double
                - yaw: float
                - pitch: float
                --
                + world(): ValidWorld
                + x(): double
                + y(): double
                + z(): double
                + yaw(): float
                + pitch(): float
            }
            class InvalidLocation <<entity-invalid>> {
                - reason: LocationFailReason
                --
                + reason(): LocationFailReason
            }
            ConfirmedLocation <-- ValidLocation
            ConfirmedLocation <-- InvalidLocation
        }
'    }
'}

@enduml
